Make sure hero section in old minisites doesn't have some content get covered

--- a/public/style.scss
+++ b/public/style.scss
@@ -1719,6 +1719,7 @@ div[name="co_section"][real_id^="column_promo"] {
 			align-items: center;
 			flex-direction: column;
 			height: 100%;
+			z-index: 1;
 		}
 	}
 
